# CarExistenceDetection

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CarLicensePlateDetection  CarLicensePlateDetection.cbp  Makefile  README.md  __features.size  cmake_install.cmake  main.cpp  requirements.txt
